@@ -8,6 +8,15 @@
 <br/>
 
 <hr/>
+1.2.4
+<hr/>
+- Fixed song length when importing MIDIs with multiple time signatures<br/>
+- Added support for horizontal mouse wheel scrolling (wxWidgets 2.9.1+ only)<br/>
+- Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI<br/>
+- Provide graphical warnings when a MIDI file cannot be perfectly loaded<br/>
+- Code cleanup and unit tests<br/><br/>
+
+<hr/>
 1.2.3
 <hr/>
 - Added metronome feature<br/>
