@@ -54,7 +54,7 @@
     <div id="osx" class="section_inside" border="0">
 
         <list>
-        <li/>   <A href="http://downloads.sourceforge.net/ariamaestosa/AriaMaestosa-1.2.3.zip"><b>Stable version 1.2.3</b></A>
+        <li/>   <A href="http://downloads.sourceforge.net/ariamaestosa/AriaMaestosa-1.2.4.zip"><b>Stable version 1.2.4</b></A>
                 for mac OS X 10.5+
         <li/>   <A href="http://downloads.sourceforge.net/ariamaestosa/AriaMaestosa-1.2.2-tiger.zip"><b>Tiger-compatible build of 1.2.2</b></A>
                 for mac OS X 10.4
@@ -93,7 +93,7 @@
     <a href="javascript:;" onmousedown="toggleDiv('windows');" border="0">Windows XP+</a>
     <div id="windows" class="section_inside" border="0">
 
-        <A href="https://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.2.3/AriaMaestosaSetup-1.2.3.exe/download">Installer for 1.2.3</A>
+        <A href="https://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.2.4/AriaMaestosaSetup-1.2.4.exe/download">Installer for 1.2.4</A>
 
     </div>
 </div>
